Issue #11096 - onepage theme layout and lop widget alignment (#12766)
* Issue #11096 - onepage theme layout and lop widget alignment

* Issue #11096 - added fixed menu to onepage

* Issue #11096 - add lop scss file

* Issue #11096 - fixed a11y issues

* Issue #11096 - fixed pr points

--- a/profile/themes/onepage/scss/base/_global.scss
+++ b/profile/themes/onepage/scss/base/_global.scss
@@ -81,7 +81,23 @@ h2.block-title {
     padding: 10px 0 30px;
   }
 }
+/**** widget width****/
+.path-front {
+  .block-block-content {
+    max-width: 1200px;
+    width: 100%;
+    margin: 0 auto;
+  }
+  .slideshow-layout-3-1-overlay {
+    min-width: 1800px;
+    width: 100%;
+    margin: 0 auto;
+  }
+}
 /**** a11y ****/
 .sr-only {
   color: transparent;
+}
+.trigger {
+  color: $color-black;
 }
