--- a/profile/themes/onepage/scss/components/_navbar.scss
+++ b/profile/themes/onepage/scss/components/_navbar.scss
@@ -20,4 +20,10 @@
       }
     }
   }
+  &.fixed {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 99;
+  }
 }
